2002-11-22  Laszlo Ersek  <erseklaszlo@chello.hu>
            Paolo Carlini  <pcarlini@unitus.it>

	PR libstdc++/8645
	* include/bits/stl_tree.h (_Rb_tree_rebalance_for_erase):
	Don't check that __w->_M_left != 0 and __w->_M_right != 0
	when they can't be otherwise.

2002-11-21  Phil Edwards  <pme@gcc.gnu.org>

	* docs/html/documentation.html:  Fix broken/thinko'd URL.

2002-11-21  Phil Edwards  <pme@gcc.gnu.org>

	* docs/doxygen/run_doxygen:  Tighter search expression for sed.
	* docs/doxygen/stdheader.cc:  Handle the case of good headers.

2002-11-21  Phil Edwards  <pme@gcc.gnu.org>

	* acinclude.m4:  Uniform formatting.
	* configure.in:  Warn when generic atomicity.h is used.
	* configure.target:  Fix comment.
	* aclocal.m4, configure:  Regenerate.

2002-11-21  Phil Edwards  <pme@gcc.gnu.org>

	* include/bits/streambuf.tcc (basic_streambuf::sputbackc):  Prefix
	"this->" to call to pbackfail.

2002-11-21  Phil Edwards  <pme@gcc.gnu.org>

	* docs/doxygen/style.css:  Update.
	* docs/doxygen/user.cfg.in:  Update.
	* docs/html/documentation.html:  Regenerate.
	* docs/html/17_intro/howto.html:  Tweak I/O sentry entry.
	* docs/html/27_io/howto.html:  New section on headers.
	* docs/html/faq/index.html:  Add i386 threading entry.
	* docs/html/faq/index.txt:  Regenerate.

	* docs/html/ext/lwg-active.html, docs/html/ext/lwg-defects.html:
	Import R23.

2002-11-21  Phil Edwards  <pme@gcc.gnu.org>

	* docs/doxygen/TODO:  Note change in clause 27 docs.
	* include/bits/basic_ios.h, include/bits/fpos.h,
	include/bits/ios_base.h, include/bits/stl_deque.h,
	include/bits/stl_iterator_base_types.h, include/std/std_fstream.h,
	include/std/std_iomanip.h, include/std/std_iosfwd.h,
	include/std/std_iostream.h, include/std/std_istream.h,
	include/std/std_ostream.h, include/std/std_sstream.h,
	include/std/std_streambuf.h:  Doxygenate all I/O entities.

2002-11-20  Benjamin Kosnik  <bkoz@redhat.com>
            Jonathan Lennox  <lennox@cs.columbia.edu>
